--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
+Babel==1.3
 Flask==0.10.1
-Flask-Alembic==1.0.2
+Flask-Assets==0.10
+Flask-Babel==0.9
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
-Flask-SQLAlchemy==2.0
+Flask-RESTful==0.3.1
 Flask-Security==1.7.4
-Flask-WTF==0.10.2
+Flask-WTF==0.10.3
 Jinja2==2.7.3
-Mako==1.0.0
 MarkupSafe==0.23
-SQLAlchemy==0.9.8
 WTForms==2.0.1
 Werkzeug==0.9.6
-alembic==0.6.7
+aniso8601==0.92
 blinker==1.3
 itsdangerous==0.24
 nose==1.3.4
 passlib==1.6.2
+python-dateutil==2.3
+pytz==2014.10
+six==1.8.0
+speaklater==1.3
+webassets==0.10.1
