--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.1
+Flask-SQLAlchemy==2.0
 Flask-Security==1.7.4
 Flask-WTF==0.10.3
 Jinja2==2.7.3
 MarkupSafe==0.23
+SQLAlchemy==0.9.8
 WTForms==2.0.1
 Werkzeug==0.9.6
 aniso8601==0.92
@@ -19,6 +21,7 @@ nose==1.3.4
 passlib==1.6.2
 python-dateutil==2.3
 pytz==2014.10
+requests==2.5.1
 six==1.8.0
 speaklater==1.3
 webassets==0.10.1
