--- a/app/angular/static/bower.json
+++ b/app/angular/static/bower.json
@@ -12,7 +12,8 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "foundation": "~5.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
