--- a/app/angular/static/bower.json
+++ b/app/angular/static/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "foundation": "~5.5.0"
+    "foundation": "~5.5.0",
+    "angular-ui-date": "~0.0.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
