--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Principal==0.4.0
 Flask-RESTful==0.3.1
 Flask-SQLAlchemy==2.0
 Flask-Security==1.7.4
+Flask-Testing==0.4.2
 Flask-WTF==0.10.3
 Jinja2==2.7.3
 MarkupSafe==0.23
@@ -16,6 +17,7 @@ WTForms==2.0.1
 Werkzeug==0.9.6
 aniso8601==0.92
 blinker==1.3
+factory-boy==2.4.1
 itsdangerous==0.24
 nose==1.3.4
 passlib==1.6.2
