--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Babel==1.3
 Flask==0.10.1
 Flask-Assets==0.10
 Flask-Babel==0.9
+Flask-Cors==1.10.2
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
@@ -18,7 +19,9 @@ Werkzeug==0.9.6
 aniso8601==0.92
 blinker==1.3
 factory-boy==2.4.1
+flask-marshmallow==0.4.0
 itsdangerous==0.24
+marshmallow==1.2.1
 nose==1.3.4
 passlib==1.6.2
 python-dateutil==2.3
